--- a/css/site.css
+++ b/css/site.css
@@ -30,7 +30,63 @@
   padding: 10px 0;
 }
 
+.form__select{
+  -webkit-appearance: none;
+  width: 100%;
+  max-width: 425px;
+  /* Fix for Safari/iOS date fields */
+  min-height: calc(0.9em + (0.8em * 2) + 0.6em);
+  padding: 0.8em;
+  font-size: 0.9em;
+  font-family: "Source Sans Pro", sans-serif;
+  outline: none;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  background: #f9f9f9;
+  transition: background 0.25s, border-color 0.25s, color 0.25s;
+}
+
+.form__select option{
+  -webkit-appearance: none;
+  width: 100%;
+  max-width: 425px;
+  /* Fix for Safari/iOS date fields */
+  min-height: calc(0.9em + (0.8em * 2) + 0.6em);
+  padding: 0.8em;
+  font-size: 0.9em;
+  font-family: "Source Sans Pro", sans-serif;
+  outline: none;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  background: #f9f9f9;
+  transition: background 0.25s, border-color 0.25s, color 0.25s;
+}
+
+.form__select:focus {
+  background: #ffffff;
+}
+
+.form__select::placeholder {
+  color: #bbbbbb;
+}
+
 .form__input {
+  -webkit-appearance: none;
+  width: 100%;
+  max-width: 425px;
+  /* Fix for Safari/iOS date fields */
+  min-height: calc(0.9em + (0.8em * 2) + 0.6em);
+  padding: 0.8em;
+  font-size: 0.9em;
+  font-family: "Source Sans Pro", sans-serif;
+  outline: none;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  background: #f9f9f9;
+  transition: background 0.25s, border-color 0.25s, color 0.25s;
+}
+
+select.form__input option{
   -webkit-appearance: none;
   width: 100%;
   max-width: 425px;
@@ -175,4 +231,57 @@ textarea.form__input {
 .btn-custom_style:focus{
   color: #f3f3f3;
   background-color: #018f72;
+}
+
+.btn-custom_style--delete{
+  font-weight: bold;
+  background-color: #ca0303;
+  color: #f3f3f3;
+  border-radius: 5px 5px 5px 5px;
+}
+
+.btn-custom_style--delete:hover{
+  color: #f3f3f3;
+}
+.btn-custom_style--delete:focus{
+  color: #f3f3f3;
+  background-color: #f73f3f;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
